objects/MMPJ_XRM_Info_Visite__c.object
<CustomObject>
    <description>MMPJ XRM</description>
    <fields>
        <fullName>MMPJ_XRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Societe__c</fullName>
        <label>Société</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>InfoVisite</relationshipLabel>
        <relationshipName>MMPJ_XRM_InfoVisite</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Utilisateur_A_Notifier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utilisateur à notifier</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Infos_Visites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_date_Heure_Rappel__c</fullName>
        <label>Date/heure du Rappel</label>
        <type>DateTime</type>
    </fields>
    <label>Info Visite</label>
    <nameField>
        <label>Objet</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Infos Visites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>